# daliatrac

./: .env  .gitignore  README.md  claude.tsx  index.html  ipc.json  package.json  pnpm-lock.yaml  test_build.js  test_data.js
src/: App.css  App.tsx  example
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_services.rs  assets.rs  data_bursatil_client.rs  heapmap.rs  lib.rs  main.rs  portfolio.rs  portfolio_services.rs  ticker_search.rs  ticker_tape.rs  user_management.rs  watchlist.rs
src/components/: AddAssetModal.tsx  Assets.css  Assets.tsx  Assets_backup.css  Assets_clean.css  Assets_clean.tsx  Assets_new.css  Assets_old.css  CreatePortfolioModal.tsx  CreateUserModal.tsx  Dashboard.css  Dashboard.tsx  FinancialTable.css  FinancialTable.tsx  Header.tsx  Heatmap.css  Heatmap.tsx  Markets.css  Markets.tsx  Modal.css  Portfolio.css  Portfolio.tsx  PortfolioEnhanced.css  PortfolioEnhanced.tsx  PortfolioNew.tsx  PortfolioOld.tsx  StockChart.css  StockChart.tsx  TickerTape.css  TickerTape.tsx  UserBubble.css  UserBubble.tsx  UserBubbleOld.tsx  UserPortfolioSelector.tsx  Watchlist.tsx  cash.sql  dividendos.sql  emisoras.sql  estado_flujo.sql  estado_posicion.sql  (+8 more)
src/utils/: appState.ts
