[package]
name = "daliatrac"
version = "0.1.0"
description = "Portfolios analysis for mexican stock market"
authors = ["Ivanool"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dalia_trac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.37", features = ["serde-float"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dashmap = "5"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenv = "0.15"
rand = "0.8"
tokio-postgres = "0.7"
textplots = "0.8"
bcrypt = "0.17.0"
deadpool-postgres = "0.14.1"
bigdecimal = "0.4.8"
lazy_static = "1.4"
